--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,4 +1,14 @@
-- name: Frontend Role
-  ansible.builtin.debug:
-    msg: Frontend Role
+# dnf module disable nginx -y
+# dnf module enable nginx:1.24 -y
+# dnf install nginx -y
+# cp nginx.conf /etc/nginx/nginx.conf
+# systemctl enable nginx 
+# systemctl start nginx
+# rm -rf /usr/share/nginx/html/* 
+# curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+# cd /usr/share/nginx/html 
+# unzip /tmp/frontend.zip
+# systemctl restart nginx
 
+- name: Disable Default Nginx & Enable Nginx 1.24
+  ansible.builtin.shell: dnf module disable nginx -y ; dnf module enable nginx:1.24 -y
