--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -12,3 +12,6 @@
 
 - name: Disable Default Nginx & Enable Nginx 1.24
   ansible.builtin.shell: dnf module disable nginx -y ; dnf module enable nginx:1.24 -y
+
+- name: install nginx
+  ansible.builtin.shell: dnf install nginx -y
