--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -14,4 +14,6 @@
   ansible.builtin.shell: dnf module disable nginx -y ; dnf module enable nginx:1.24 -y
 
 - name: install nginx
-  ansible.builtin.shell: dnf install nginx -y
+  ansible.builtin.dnf:
+    name: nginx
+    state: latest
