--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -17,3 +17,25 @@
   ansible.builtin.dnf:
     name: nginx
     state: latest
+- name: copy nginx config file
+  ansible.builtin.copy:
+    src: ngix.conf
+    dest: /etc/nginx/nginx.conf
+- name: Remove default content directory
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: absent
+- name: create nginx content directory
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: directory
+- name: download and extract content
+  ansible.builtin.unarchive:
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+    dest: /usr/share/nginx/html
+    remote_src: yes
+- name: Start nginx Service
+  ansible.builtin.systemd_service:
+    state: started
+    name: nginx
+    enabled: true
