--- a/roles/common/tasks/app_pre_setup.yml
+++ b/roles/common/tasks/app_pre_setup.yml
@@ -14,6 +14,6 @@
 
 - name: download and extract app content
   ansible.builtin.unarchive:
-    src: https://roboshop-artifacts.s3.amazonaws.com/{{ app_name }}-v3.zip
+    src: "https://roboshop-artifacts.s3.amazonaws.com/{{ app_name }}-v3.zip"
     dest: /app
     remote_src: yes
