--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -3,12 +3,14 @@
     name: maven
     state: present
 
-- name: Load App Pre-requisites 
+- name: Load App Pre-Requisites
   ansible.builtin.include_tasks:
     file: app_pre_setup.yml
 
-- name: download app dependencies
-  ansible.builtin.shell: mvn clean package ; mv target/${{ app_name }}-1.0.jar ${{ app_name }}.jar
+- name: Download App dependencies
+  ansible.builtin.shell: mvn clean package ; mv target/{{ app_name }}-1.0.jar {{ app_name }}.jar
   args:
     chdir: /app
-  
+
+
+
