--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Run Python
   ansible.builtin.include_role:
-    name: python
+    name: common
     tasks_from: python
 
 - name: Run systemd_setup
