--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -1,20 +1,3 @@
-# dnf install golang -y
-
-# cp dispatch.service /etc/systemd/system/dispatch.service
-# useradd roboshop
-# mkdir /app
-# curl -L -o /tmp/dispatch.zip https://roboshop-artifacts.s3.amazonaws.com/dispatch-v3.zip 
-# cd /app 
-# unzip /tmp/dispatch.zip
-# cd /app 
-# go mod init dispatch
-# go get 
-# go build
-
-# systemctl daemon-reload
-# systemctl enable dispatch 
-# systemctl start dispatch
-
 - name: Install golang
   ansible.builtin.dnf:
     name: golang
@@ -40,8 +23,7 @@
   ansible.builtin.get_url:
     url: "https://roboshop-artifacts.s3.amazonaws.com/{{ app_name }}-v3.zip"
     dest: "/tmp/{{ app_name }}.zip"
-  
-  
+
 - name: Extract dispatch app
   ansible.builtin.unarchive:
     src: "/tmp/{{ app_name }}.zip"
@@ -54,8 +36,8 @@
   ansible.builtin.command: go mod init {{ app_name }}
   args:
     chdir: /app
+    creates: /app/go.mod   # ✅ FIXED LOCATION
   become_user: roboshop
-  creates: /app/go.mod
 
 - name: Download Go dependencies
   ansible.builtin.command: go get
@@ -67,19 +49,10 @@
   ansible.builtin.command: go build
   args:
     chdir: /app
+    creates: "/app/{{ app_name }}"   # ✅ idempotent build
   become_user: roboshop
 
 - name: Copy systemd service file
   ansible.builtin.copy:
     src: "{{ app_name }}.service"
     dest: "/etc/systemd/system/{{ app_name }}.service"
-
-- name: Reload systemd
-  ansible.builtin.systemd:
-    daemon_reload: yes
-
-- name: Start and enable service
-  ansible.builtin.systemd:
-    name: "{{ app_name }}"
-    state: started
-    enabled: yes
