--- a/roles/frontend/tasks/templates/nginx.conf
+++ b/roles/frontend/tasks/templates/nginx.conf
@@ -47,11 +47,11 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://catalogue-dev.srikanth553.store:8080/; }
-        location /api/user/ { proxy_pass http://user-dev.srikanth553.store:8080/; }
-        location /api/cart/ { proxy_pass http://cart-dev.srikanth553.store:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping-dev.srikanth553.store:8080/; }
-        location /api/payment/ { proxy_pass http://payment-dev.srikanth553.store:8080/; }
+        location /api/catalogue/ { proxy_pass {{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/frontend:catalogue_url token={{ token }} url=http://vault-int.srikanth553.store:8200') }}; }
+        location /api/user/ { proxy_pass {{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/frontend:user_url token={{ token }} url=http://vault-int.srikanth553.store:8200') }}; }
+        location /api/cart/ { proxy_pass {{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/frontend:cart_url token={{ token }} url=http://vault-int.srikanth553.store:8200') }}; }
+        location /api/shipping/ { proxy_pass {{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/frontend:shipping_url token={{ token }} url=http://vault-int.srikanth553.store:8200') }}; }
+        location /api/payment/ { proxy_pass {{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/frontend:payment_url token={{ token }} url=http://vault-int.srikanth553.store:8200') }}; }
 
         location /health {
           stub_status on;
