--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,6 +1,5 @@
-- name: Setup Roboshop Project
+- name: Setup RoboShop Project
   hosts: all
   become: yes
   roles:
-   - "{{ role_name }}"
-   
+    - "{{ role_name }}"
