--- a/roles/payment/templates/payment.service
+++ b/roles/payment/templates/payment.service
@@ -4,13 +4,13 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_HOST token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=CART_PORT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_PORT token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=USER_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:USER_HOST token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=USER_PORT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:USER_PORT token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=AMQP_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_HOST token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=AMQP_USER={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_USER token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=AMQP_PASS={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_PASS token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
+Environment=CART_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_HOST token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=CART_PORT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_PORT token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=USER_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:USER_HOST token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=USER_PORT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:USER_PORT token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=AMQP_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_HOST token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=AMQP_USER={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_USER token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=AMQP_PASS={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:AMQP_PASS token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 ExecStop=/bin/kill -9 $MAINPID
