--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -18,7 +18,7 @@
 #   ansible.builtin.shell: mysql -h mysql-dev.srikanth553.store -uroot -pRoboShop@1 < /app/db/master-data.sql
 
 - name: Load to DB
-  ansible.builtin.shell: mysql -h mysql-dev.srikanth553.storee -u{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:username token={{ token }} url=http://vault-int.srikanth553.storee:8200') }} -p{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:password token={{ token }} url=http://vault-int.srikanth553.storee:8200') }} < /app/db/{{ item }}.sql
+  ansible.builtin.shell: mysql -h mysql-dev.srikanth553.storee -u{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:username token={{ token }} url=http://vault-int.srikanth553.storee:8200') }} -p{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:password token={{ token }} url=http://vault-int.srikanth553.store:8200') }} < /app/db/{{ item }}.sql
   loop:
     - schema
     - app-user
