--- a/roles/shipping/templates/shipping.service
+++ b/roles/shipping/templates/shipping.service
@@ -3,8 +3,8 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_ENDPOINT token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=DB_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:DB_HOST token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
+Environment=CART_ENDPOINT={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:CART_ENDPOINT token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=DB_HOST={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:DB_HOST token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
