--- a/user/templates/user.service
+++ b/user/templates/user.service
@@ -2,9 +2,9 @@
 Description = User Service
 [Service]
 User=roboshop
-Environment=MONGO={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:MONGO token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}
-Environment=REDIS_URL='{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:REDIS_URL token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}'
-Environment=MONGO_URL="{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:MONGO_URL token={{ token }} url=http://vault-int.srikanth553.storee:8200') }}"
+Environment=MONGO={{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:MONGO token={{ token }} url=http://vault-int.srikanth553.store:8200') }}
+Environment=REDIS_URL='{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:REDIS_URL token={{ token }} url=http://vault-int.srikanth553.store:8200') }}'
+Environment=MONGO_URL="{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-{{ env }}/data/{{ app_name }}:MONGO_URL token={{ token }} url=http://vault-int.srikanth553.store:8200') }}"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
